package com.totoro.tororodemo.design_pattern.design_demo_5_02;

/**
 * 功能：统一适配接口
 *
 * @author zhenghang
 * @date 2024/8/11
 */
public interface IOrderAdapterService {
    boolean isFirst(String uId);
}
